--- a/pages/careers.html
+++ b/pages/careers.html
@@ -44,11 +44,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./clients.html">Clients & Partners</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
                 </ul>
             </div>
+            <li class="btn-lets-talk">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+            </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -95,8 +95,12 @@
                         instead of one
                         of many, and opportunities for growth abound.</p>
                 </div>
-                <div></div>
-                <div></div>
+                <div class="image-wrapper">
+                    <img src="../assets/pexels-andrea-piacquadio-3861566.jpg" alt="" srcset="">
+                </div>
+                <div class="image-wrapper">
+                    <img src="../assets/pexels-artem-podrez-5716042.jpg" alt="" srcset="">
+                </div>
                 <div class="story-content-top-main-content reveal-2">
                     <div class="subtitle numbers is-careers">/&nbsp;02</div>
                     <p class="paragraph ">We’re in a hyper-growth phase and are seeking talent to join our team. The
@@ -112,7 +116,9 @@
                         where you can quickly see the real impact of your contributions, we want you to hear from you!
                     </p>
                 </div>
-                <div></div>
+                <div class="image-wrapper">
+                    <img src="../assets/pexels-kindel-media-7688174.jpg" alt="" srcset="">
+                </div>
             </div>
         </div>
         <div class="benefits">
