--- a/pages/index.html
+++ b/pages/index.html
@@ -44,11 +44,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./clients.html">Clients & Partners</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
                 </ul>
             </div>
+            <li class="btn-lets-talk">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+            </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -97,11 +97,25 @@
         </div>
         <div class="expertise">
             <div class="container">
-                <p class="intro">We rapidly modernize your legacy processes and systems using low-code platforms, RPA
-                    and
-                    Machine
-                    Learning. We augment our solutions with intelligent automation and data-driven analytics leveraging
-                    human and digital intelligence to further drive your strategic decision-making.</p>
+                <p class="intro">Maximize your low-code platform investments by using our ready-to-use, pre-build
+                    solutions and accelerators. Drive adoption by easily configuring these solutions to meet your own
+                    unique needs.</p>
+                <div class="skew-cards">
+                    <div class="skew-card">
+                        <p>iTrust Audit Suite</p>
+                        <div class="aqua"></div>
+                        <div class="blue"></div>
+                    </div>
+                    <div class="skew-card">
+                        <p>Field Inspection Suite</p>
+                    </div>
+                    <div class="skew-card">
+                        <p>Dynamic Case Management</p>
+                    </div>
+                    <div class="skew-card">
+                        <p>Intelligent Project Management</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
