--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -44,11 +44,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./clients.html">Clients & Partners</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
                 </ul>
             </div>
+            <li class="btn-lets-talk">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+            </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -87,7 +87,6 @@
             <div class="row justify-content-center m-0" style="gap: 50px;">
                 <div class="col-md-6 col-lg-5 reveal-1">
                     <div class="card">
-                        <div class="icon"><i class="bi bi-shield-lock-fill" style="color: #ff689b;"></i></div>
                         <h4 class="title"><a href="">iTrust Audit Suite</a></h4>
                         <p class="description">iTrust Audit uses Appian’s proven mobile-ready, dynamic process and case
                             management, record security, document management as well as reporting and dashboard
@@ -96,7 +95,6 @@
                 </div>
                 <div class="col-md-6 col-lg-5 reveal-2">
                     <div class="card">
-                        <div class="icon"><i class="bi bi-menu-up" style="color: #3fcdc7;"></i></div>
                         <h4 class="title"><a href="">Field Inspection Suite</a></h4>
                         <p class="description">Easily digitize your field inspection forms and workflows, while making
                             them
@@ -108,7 +106,6 @@
 
                 <div class="col-md-6 col-lg-5 reveal-1">
                     <div class="card">
-                        <div class="icon"><i class="bi bi-file-ruled-fill" style="color: #e9bf06;"></i></div>
                         <h4 class="title"><a href="">Dynamic Case Management</a></h4>
                         <p class="description">A highly configurable, secure and scalable case management system build
                             on
@@ -120,7 +117,6 @@
 
                 <div class="col-md-6 col-lg-5 reveal-2">
                     <div class="card">
-                        <div class="icon"><i class="bi bi-graph-up" style="color:#41cf2e;"></i></div>
                         <h4 class="title"><a href="">Intelligent Project Management</a></h4>
                         <p class="description">Track all major project data points including schedule, tasks, risks,
                             budget
