--- a/pages/about.html
+++ b/pages/about.html
@@ -44,11 +44,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./clients.html">Clients & Partners</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contact.html">Contacts</a>
-                    </li>
                 </ul>
             </div>
+            <li class="btn-lets-talk">
+                <a class="nav-link" href="./contact.html">Contacts</a>
+            </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
