--- a/pages/index.html
+++ b/pages/index.html
@@ -30,9 +30,6 @@
                         <a class="nav-link" href="./index.html">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="./solutions.html">Solutions</a>
                     </li>
                     <li class="nav-item">
@@ -53,9 +50,6 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="./index.html">Home </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./services.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./solutions.html">Solutions</a>
@@ -95,11 +89,13 @@
                 </div>
             </div>
         </div>
-        <div class="expertise">
-            <div class="container">
-                <p class="intro">Maximize your low-code platform investments by using our ready-to-use, pre-build
-                    solutions and accelerators. Drive adoption by easily configuring these solutions to meet your own
-                    unique needs.</p>
+        <section class="services container">
+            <div class="services-intro ">
+                <h3 class="page-title">Services</h3>
+                <p>We rapidly modernize your legacy processes and systems using low-code platforms, RPA and Machine
+                    Learning. We augment our solutions with intelligent automation and data-driven analytics leveraging
+                    human and digital intelligence to further drive your strategic decision-making.</p>
+
                 <div class="skew-cards">
                     <div class="skew-card">
                         <p>iTrust Audit Suite</p>
@@ -117,7 +113,144 @@
                     </div>
                 </div>
             </div>
-        </div>
+            <div>
+                <h4 class="service-title">NextGen Technology Advisory</h4>
+                <div class="about-container">
+                    <div class="icon-box aos-init aos-animate d-flex  flex-md-column flex-sm-row " data-aos="fade-up"
+                        data-aos-delay="100">
+                        <div class="icon"><i class="bi bi-shield-fill-check"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Artificial Intelligence &amp; Machine Learning</a></h4>
+                            <p class="description">We apply our deep expertise in AI and Machine Learning to help
+                                uncover
+                                your
+                                unmet mission needs and solve some of your toughest problems with our AI powered
+                                solutions.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box aos-init aos-animate d-flex  flex-md-column flex-sm-row " data-aos="fade-up"
+                        data-aos-delay="200">
+                        <div class="icon"><i class="bi bi-app-indicator"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Low Code Platform Governance</a></h4>
+                            <p class="description">We conduct in-depth analysis of your low-code platforms – from health
+                                check
+                                assessments to code quality. We create tailored risk assessment reports with your
+                                current
+                                and
+                                future risks, and potential mitigation strategies.</p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box aos-init aos-animate d-flex  flex-md-column flex-sm-row " data-aos="fade-up"
+                        data-aos-delay="300">
+                        <div class="icon"><i class="bi bi-bookmark-check-fill"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Robotic Process Automation (RPA)</a></h4>
+                            <p class="description">Wherever you may be in your automation journey, with our end-to-end
+                                RPA
+                                consulting services, we can help you realize the value of your RPA deployment and help
+                                integrate
+                                AI &amp; ML to drive intelligent automation while helping you scale for long term
+                                success.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h4 class="service-title">Best-in-class Application Delivery</h4>
+
+                <div class="about-container">
+                    <div class="icon-box aos-init aos-animate  d-flex  flex-md-column flex-sm-row" data-aos="fade-up"
+                        data-aos-delay="100">
+                        <div class="icon"><i class="bi bi-gear-wide-connected"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Solution Architecture, Design &amp; Development</a></h4>
+                            <p class="description">Our proven methodology and best practices for intelligent automation
+                                help
+                                us
+                                to consistently deliver tangible business outcomes in an agile manner and help scale for
+                                business continuity.</p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box aos-init aos-animate  d-flex  flex-md-column flex-sm-row" data-aos="fade-up"
+                        data-aos-delay="200">
+                        <div class="icon"><i class="bi bi-bar-chart-steps"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Agile Delivery Framework</a></h4>
+                            <p class="description">Our agile delivery framework primarily focuses on business value and
+                                is
+                                underpinned by strong stakeholder engagement and transparency. We bring predictability
+                                and
+                                efficiency to your Low Code implementations.</p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box aos-init aos-animate  d-flex  flex-md-column flex-sm-row" data-aos="fade-up"
+                        data-aos-delay="300">
+                        <div class="icon"><i class="bi bi-layer-forward"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">DevOps and CI/CD</a></h4>
+                            <p class="description">Our DevOps service strategy is built on enterprise agility. Our
+                                cloud-based,
+                                highly configurable CI/CD pipelines seamlessly deploy your applications across
+                                environments.
+                                This results in faster delivery of features, stable releases, and more time to innovate.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h4 class="service-title">Business Solutions &amp; Accelerators</h4>
+                <div class="about-container">
+                    <div class="icon-box aos-init aos-animate d-flex flex-md-column flex-sm-row" data-aos="fade-up"
+                        data-aos-delay="100">
+                        <div class="icon"><i class="bi bi-lightbulb-fill"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Business Process Reengineering</a></h4>
+                            <p class="description">We leverage industry best practices to build your as-is and to-be
+                                business
+                                capabilities. We identify processes for elimination or automation to streamline your
+                                business.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="icon-box aos-init aos-animate d-flex  flex-md-column flex-sm-row" data-aos="fade-up"
+                        data-aos-delay="200">
+                        <div class="icon"><i class="bi bi-stack"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Code Accelerators &amp; Extensions</a></h4>
+                            <p class="description">Our library of reusable extensions and accelerators serve as building
+                                blocks
+                                of our solutions. It allows us to rapidly build Low Code applications with high-quality
+                                features
+                                in a very cost-effective fashion.</p>
+                        </div>
+                    </div>
+
+                    <div class="icon-box aos-init aos-animate d-flex  flex-md-column flex-sm-row" data-aos="fade-up"
+                        data-aos-delay="300">
+                        <div class="icon"><i class="bi bi-person-check-fill"></i></div>
+                        <div style="flex: 1;">
+                            <h4 class="title"><a href="">Human Centered Design (HCD)</a></h4>
+                            <p class="description">We blend human-centered design approach with agile delivery to
+                                produce
+                                quick
+                                results. We deliver “the right product for the problem” to reduce re-work and greatly
+                                improve
+                                user adoption.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </section>
     <footer id="footer">
         <div class="footer-top">
