--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -21,7 +21,7 @@
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
             <a class="navbar-brand" href="#"><img class="img-fluid" style="max-height: 40px;"
-                    src="https://ishift.io/assets/img/logo.png" alt="" srcset=""></a>
+                    src="../assets/ishift-small.jpeg" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
@@ -129,8 +129,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 footer-info">
                         <div class="logo">
-                            <a href="index.html"><img src="https://ishift.io/assets/img/logo-white.png" alt=""
-                                    class="img-fluid"></a>
+                            <a href="index.html"><img src="../assets/ishift-large.jpeg" alt="" class="img-fluid"></a>
                         </div>
                         <p>
                             <br>iShift offers deep low-code technical leadership and Agile delivery expertise. Our
