--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
             <a class="navbar-brand" href="#"><img class="img-fluid" style="max-height: 40px;"
-                    src="https://ishift.io/assets/img/logo.png" alt="" srcset=""></a>
+                    src="../assets/ishift-small.jpeg" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
@@ -127,7 +127,7 @@
                     </div>
                 </div><iframe class="i-frame"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99370.54990681648!2d-77.08461544443311!3d38.893575530021586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C%20DC!5e0!3m2!1sen!2sus!4v1620436537713!5m2!1sen!2sus"
-                    frameborder="0" style="border:0; width: 100%; height: 340px;" allowfullscreen=""></iframe>
+                    frameborder="0" style="border:0; width: 100%; height: 496px;" allowfullscreen=""></iframe>
             </div>
         </div>
     </section>
@@ -137,8 +137,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 footer-info">
                         <div class="logo">
-                            <a href="index.html"><img src="https://ishift.io/assets/img/logo-white.png" alt=""
-                                    class="img-fluid"></a>
+                            <a href="index.html"><img src="../assets/ishift-large.jpeg" alt="" class="img-fluid"></a>
                         </div>
                         <p>
                             <br>iShift offers deep low-code technical leadership and Agile delivery expertise. Our
@@ -189,6 +188,13 @@
             duration: 1700,
             origin: 'right',
             distance: '100px',
+            delay: 150
+        })
+
+        ScrollReveal().reveal('.i-frame', {
+            duration: 1700,
+            origin: 'bottom',
+            distance: '50px',
             delay: 150
         })
 
