--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
             <a class="navbar-brand" href="#"><img class="img-fluid" style="max-height: 40px;"
-                    src="../assets/ishift-small.jpeg" alt="" srcset=""></a>
+                    src="../assets/ishift-large.jpeg" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
