--- a/pages/careers.html
+++ b/pages/careers.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <title>iShift - Low Code + Machine Learning</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <script src="./index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -21,7 +22,7 @@
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
             <a class="navbar-brand" href="#"><img class="img-fluid" style="max-height: 40px;"
-                    src="../assets/ishift-small.jpeg" alt="" srcset=""></a>
+                    src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
@@ -171,35 +172,53 @@
         </div>
         <div class="apply-container d-flex align-items-center justify-content-center">
             <div class="stripe"></div>
-            <a href="https://www.linkedin.com/jobs/view/2809800021/" target="_blank"
+            <a href="https://www.linkedin.com/company/ishift-io/jobs/" target="_blank"
                 class="button-secondary w-button">Apply Online<span class="button-arrow"></span></a>
         </div>
     </section>
     <footer id="footer">
         <div class="footer-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 footer-info">
-                        <div class="logo">
-                            <a href="index.html"><img src="../assets/ishift-large.jpeg" alt="" class="img-fluid"></a>
-                        </div>
-                        <p>
-                            <br>iShift offers deep low-code technical leadership and Agile delivery expertise. Our
-                            low-code focused architecture patterns, best practices and accelerators, combined with our
-                            strong technical teams, deliver best-in-class, innovative solutions to our customers.
-                        </p>
+            <div class="row justify-content-between">
+                <div class="col-lg-4 col-md-6 footer-info">
+                    <div class="logo">
+                        <a href="index.html"><img src="../assets/ishift.jpeg" alt="" class="img-fluid"></a>
                     </div>
+                    <p>
+                        <br>iShift offers deep low-code technical leadership and Agile delivery expertise. Our
+                        low-code focused architecture patterns, best practices and accelerators, combined with our
+                        strong technical teams, deliver best-in-class, innovative solutions to our customers.
+                    </p>
+                </div>
 
-                    <div class="col-lg-2 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./services.html">Services</a></li>
-                            <li><a href="./about.html">About</a></li>
-                        </ul>
-                    </div>
+                <div class="col-md-2 footer-links">
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./solutions.html">Solutions</a></li>
+                        <li><a href="./about.html">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-2 footer-links second-menu">
+                    <ul>
+                        <li><a href="./careers.html">Careers</a></li>
+                        <li><a href="./clients.html">Clients & Partners</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 location">
+                    <p class="address">
+                        <a class="marker" target="_blank" href="https://goo.gl/maps/1ZAigyxZm4B2m3R77"><i
+                                class="bi bi-geo-alt"></i></a>
+                        <span>1775 Tysons Blvd, McLean, VA 22102</span>
+                    </p>
+
+                    <p class="phone">+1 323 620 2299</p>
+
+                    <p class="email"><a href="info@ishift.io">info@ishift.io</a></p>
                 </div>
             </div>
+            <a target="_blank" href="https://www.linkedin.com/company/ishift-io/">
+                <img style="margin-left:auto;display: block;" src="../assets/linkedin.png" alt="Linkedin icon"
+                    width="38px" />
+            </a>
         </div>
 
     </footer>
