--- a/pages/solutions.html
+++ b/pages/solutions.html
@@ -154,8 +154,8 @@
                 <div class="col-md-3 location">
                     <p class="address">
                         <a class="marker" target="_blank" href="https://goo.gl/maps/1ZAigyxZm4B2m3R77"><i
-                                class="bi bi-geo-alt"></i></a>
-                        <span>1775 Tysons Blvd, McLean, VA 22102</span>
+                                class="bi bi-geo-alt"></i>
+                            <span>1775 Tysons Blvd, McLean, VA 22102</span></a>
                     </p>
 
                     <p class="phone">+1 323 620 2299</p>
