--- a/pages/index.html
+++ b/pages/index.html
@@ -21,7 +21,7 @@
 <body>
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
-            <a class="navbar-brand" href="#"><img class="img-fluid" style="max-height: 40px;"
+            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 40px;"
                     src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
@@ -101,8 +101,6 @@
                 <div class="skew-cards">
                     <div class="skew-card">
                         <p>iTrust Audit Suite</p>
-                        <div class="aqua"></div>
-                        <div class="blue"></div>
                     </div>
                     <div class="skew-card">
                         <p>Field Inspection Suite</p>
