--- a/pages/contact.html
+++ b/pages/contact.html
@@ -21,7 +21,7 @@
 <body>
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
-            <a class="navbar-brand" href="#"><img class="img-fluid" style="max-height: 40px;"
+            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 40px;"
                     src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="contact-form-container">
-                    <form class="contact-form" action="https://formspree.io/f/mleynope" method="post">
+                    <form class="contact-form" action="https://formspree.io/f/xknlblep" method="post">
                         <div class="input-wrapper">
                             <label for="name">Name</label>
                             <input type="text" name="name" id="name" placeholder="John Carter" required>
@@ -119,12 +119,13 @@
                             class="paragraph-large contact-info-link last">info@ishift.io </a>
                     </div>
                     <div class="contact-info-wrapper">
-                        <div class="contact-info-content-top"><img
-                                src="https://uploads-ssl.webflow.com/615323a364f57bda9169d4d5/615323a364f57b199369d531_icon-1-links-contact-architecture-x-template.svg"
-                                loading="eager" alt="" class="image contact-info-icon">
-                            <div>Address</div>
-                        </div>
-                        <div class="paragraph-large contact-info">Northern Virginia / Washington, DC</div>
+                        <a href="https://goo.gl/maps/1ZAigyxZm4B2m3R77">
+                            <div class="contact-info-content-top">
+                                <i class="bi bi-geo-alt image contact-info-icon"></i>
+                                <div>Address</div>
+                            </div>
+                        </a>
+                        <div class="paragraph-large contact-info">1775 Tysons Blvd, McLean, VA 22102</div>
                     </div>
                 </div><iframe class="i-frame"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d99370.54990681648!2d-77.08461544443311!3d38.893575530021586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c6de5af6e45b%3A0xc2524522d4885d2a!2sWashington%2C%20DC!5e0!3m2!1sen!2sus!4v1620436537713!5m2!1sen!2sus"
