--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <title>iShift - Low Code + Machine Learning</title>
+    <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/favicon.png" rel="icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <script src="./index.js"></script>
@@ -143,11 +145,13 @@
                         <a class="marker" target="_blank" href="https://goo.gl/maps/1ZAigyxZm4B2m3R77"><i
                                 class="bi bi-geo-alt"></i>
                             <span>1775 Tysons Blvd, McLean, VA 22102</span></a>
+                        43152 Laughing Quail Ct, Ashburn, VA - 20148<br>
+                        <strong>DUNS:</strong> 055279051<br>
+                        <strong>UEID:</strong> NF9CQGUTVRD8<br>
+                        <strong>CAGE Code:</strong> 8UV24<br>
+                        <strong>Phone:</strong> +1 323 620 2299<br>
+                        <strong>Email:</strong> info@ishift.io<br>
                     </p>
-
-                    <p class="phone">+1 323 620 2299</p>
-
-                    <p class="email"><a href="info@ishift.io">info@ishift.io</a></p>
                 </div>
             </div>
             <a target="_blank" href="https://www.linkedin.com/company/ishift-io/">
