--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <title>iShift - Low Code + Machine Learning</title>
+    <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/favicon.png" rel="icon">
+    <link href="assets/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="../assets/favicon.png" rel="icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <script src="./index.js"></script>
@@ -21,7 +25,7 @@
 <body>
     <header class="d-flex align-items-center justify-space-between fixed-top">
         <nav class="navbar fixed-top bg-white navbar-expand-lg navbar-light w-100">
-            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 40px;"
+            <a class="navbar-brand" href="./index.html"><img class="img-fluid" style="max-height: 50px;"
                     src="../assets/ishift-logo-blue.png" alt="" srcset=""></a>
             <div class="icon" onclick="handleOnClick()"><i class="bi bi-list"></i></div>
 
@@ -73,10 +77,11 @@
     </header>
     <section>
         <div class="home-banner">
-            <div class="container d-flex flex-wrap">
+            <div
+                class="container d-flex flex-sm-wrap justify-content-center align-items-center flex-column-reverse flex-lg-row">
                 <div class="hero-info w-50">
-                    <h2 class="legend">Low-Code Automation <br>
-                        for the Digital Enterprise <span>!</span>
+                    <h2 class="legend">Low-Code Automation
+                        for the Digital Enterprise!
                     </h2>
                     <p class="description" style="color: aliceblue;">We deliver AI driven digital transformation in
                         low-code
@@ -89,29 +94,14 @@
                         <a href="./solutions.html" class="btn-services">Get Started</a>
                     </div>
                 </div>
+                <img class="hero-img w-50" src="../assets/hero-img.svg" alt="hero svg">
             </div>
         </div>
         <section class="services container" id="service">
             <div class="services-intro">
-                <h3 class="page-title">Services</h3>
                 <p>We rapidly modernize your legacy processes and systems using low-code platforms, RPA and Machine
                     Learning. We augment our solutions with intelligent automation and data-driven analytics leveraging
                     human and digital intelligence to further drive your strategic decision-making.</p>
-
-                <div class="skew-cards">
-                    <div class="skew-card">
-                        <p>iTrust Audit Suite</p>
-                    </div>
-                    <div class="skew-card">
-                        <p>Field Inspection Suite</p>
-                    </div>
-                    <div class="skew-card">
-                        <p>Dynamic Case Management</p>
-                    </div>
-                    <div class="skew-card">
-                        <p>Intelligent Project Management</p>
-                    </div>
-                </div>
             </div>
             <div>
                 <h4 class="service-title">NextGen Technology Advisory</h4>
@@ -284,11 +274,13 @@
                         <a class="marker" target="_blank" href="https://goo.gl/maps/1ZAigyxZm4B2m3R77"><i
                                 class="bi bi-geo-alt"></i>
                             <span>1775 Tysons Blvd, McLean, VA 22102</span></a>
+                        43152 Laughing Quail Ct, Ashburn, VA - 20148<br>
+                        <strong>DUNS:</strong> 055279051<br>
+                        <strong>UEID:</strong> NF9CQGUTVRD8<br>
+                        <strong>CAGE Code:</strong> 8UV24<br>
+                        <strong>Phone:</strong> +1 323 620 2299<br>
+                        <strong>Email:</strong> info@ishift.io<br>
                     </p>
-
-                    <p class="phone">+1 323 620 2299</p>
-
-                    <p class="email"><a href="info@ishift.io">info@ishift.io</a></p>
                 </div>
             </div>
             <a target="_blank" href="https://www.linkedin.com/company/ishift-io/">
