--- a/solutions/index.html
+++ b/solutions/index.html
@@ -30,45 +30,45 @@
             <div class="collapse navbar-collapse justify-content-end navbarMenu" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="removeLastPathSegment('/home/index.html')">Home </a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/solutions/index.html')">Solutions</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/about/index.html')">About</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/about/index.html')">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/careers/index.html')">Careers</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/careers/index.html')">Careers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/clients/index.html')">Clients &
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/clients/index.html')">Clients &
                             Partners</a>
                     </li>
                 </ul>
             </div>
             <li class="btn-lets-talk">
-                <a class="nav-link" onclick="removeLastPathSegment('/contact/index.html')">Contacts</a>
+                <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/contact/index.html')">Contacts</a>
             </li>
             <div class="mobile-nav" id="mobile-nav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="removeLastPathSegment('/home/index.html')">Home </a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/home/index.html')">Home </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/solutions/index.html')">Solutions</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/solutions/index.html')">Solutions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/about/index.html')">About</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/about/index.html')">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/careers/index.html')">Careers</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/careers/index.html')">Careers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/clients/index.html')">Clients & Partners</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/clients/index.html')">Clients & Partners</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" onclick="removeLastPathSegment('/contact/index.html')">Contacts</a>
+                        <a class="nav-link" onclick="removeLastPathSegment('/Ishift.io/contact/index.html')">Contacts</a>
                     </li>
                 </ul>
             </div>
