--- a/career/index.html
+++ b/career/index.html
@@ -18,6 +18,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     <script src="../index.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+        (()=>{
+            const currentUrl = window.location.href;
+     const newUrl = currentUrl.replace('index.html', '');
+     history.pushState({}, null, newUrl);
+        })()
+    </script>
 </head>
 
 <body>
@@ -73,44 +80,109 @@
             </div>
         </nav>
     </header>
-    <section class="about">
-        <div class="container aos-init aos-animate" data-aos="fade-up">
-            <div class="section-header">
-                <h3>About Us</h3>
-                <p>iShift, LLC. is a small business based in the Washington D.C. area comprising a multidisciplinary
-                    team of technology driven professionals with decades of experience in both the public and
-                    private sectors. We endeavor to unleash the power of low-code platforms and machine learning to
-                    bring process discovery, task automation and data-driven analytics for your strategic
-                    decision-making. We offer a variety of technology immersion and advisory/governance services,
-                    each tailored to fit your specific mission needs.</p>
+    <section class="careers">
+        <div class="container">
+            <div class="solutions-intro ">
+                <h3>Careers</h3>
+                <p>We are passionate about creating a stimulating, supportive work environment for you. We strive to
+                    keep you healthy, happy and productive.
+                </p>
             </div>
-
-            <div class="about-cards row-eq-height justify-content-center">
+        </div>
+        <div class="story">
+            <div class="story-content container">
+                <div class="story-content-top-main-content reveal-1">
+                    <div class="subtitle numbers is-careers">/&nbsp;01</div>
+                    <p class="paragraph ">We help you realize your full depth, breadth of talents. You will be mentored
+                        by some of the best in the industry. Working at a smaller company also lets you fully contribute
+                        your talents – to both your team and the company.</br></br> You’re one of the important few
+                        instead of one
+                        of many, and opportunities for growth abound.</p>
+                </div>
+                <div class="image-wrapper">
+                    <img src="../assets/pexels-andrea-piacquadio-3861566.jpg" alt="" srcset="">
+                </div>
+                <div class="image-wrapper">
+                    <img src="../assets/pexels-artem-podrez-5716042.jpg" alt="" srcset="">
+                </div>
+                <div class="story-content-top-main-content reveal-2">
+                    <div class="subtitle numbers is-careers">/&nbsp;02</div>
+                    <p class="paragraph ">We’re in a hyper-growth phase and are seeking talent to join our team. The
+                        work you do will be interesting and far-reaching and you’ll have the chance to work with others
+                        who are as smart, creative, accountable, and driven as you are. </br> </br>We are looking for
+                        team members
+                        who share our belief that with innovative technology and out-of-the-box thinking, we can change
+                        the world.</p>
+                </div>
+                <div class="story-content-top-main-content reveal-1">
+                    <div class="subtitle numbers is-careers">/&nbsp;03</div>
+                    <p class="paragraph ">If you thrive being in the middle of the action, working in an environment
+                        where you can quickly see the real impact of your contributions, we want you to hear from you!
+                    </p>
+                </div>
+                <div class="image-wrapper">
+                    <img src="../assets/pexels-kindel-media-7688174.jpg" alt="" srcset="">
+                </div>
+            </div>
+        </div>
+        <div class="benefits">
+            <div class="about-cards row-eq-height justify-content-center container">
                 <div class="card aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
-                    <i class="bi bi-patch-check-fill"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Low Code Experience</h5>
-                        <p class="card-text">50+ years of combined experience in delivering mission-critical,
-                            low-code applications.</p>
+                        <h5 class="card-title">Personalized PTO</h5>
+                        <p class="card-text">100% paid health insurance for you and your family.</p>
                     </div>
                 </div>
+
                 <div class="card aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
-                    <i class="bi bi-award-fill"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Multi-Domain Expertise</h5>
-                        <p class="card-text">From Grants, Acquisition, Claims to Financial and Regulatory
-                            compliance solutions, we know it all. </p>
+                        <h5 class="card-title">Financial Wellbeing
+                        </h5>
+                        <p class="card-text">W401(k) plans with up to 5% match & 100% vesting for eligible
+                            employees. We also reimburse the cost of training for pre-approved, job-related courses
+                            and certifications.
+                        </p>
                     </div>
                 </div>
                 <div class="card aos-init aos-animate" data-aos="zoom-in" data-aos-delay="300">
-                    <i class="bi bi-trophy-fill"></i>
                     <div class="card-body">
-                        <h5 class="card-title">Award Winning Team</h5>
-                        <p class="card-text">We are team with proven record of winning multiple low-code
-                            hackathons.</p>
+                        <h5 class="card-title">Career Growth </h5>
+                        <p class="card-text">We invest in our employees and provide room and opportunities for
+                            everyone to grow and learn as their career progresses with results driven promotions.
+                        </p>
+                    </div>
+                </div>
+                <div class="card aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+                    <div class="card-body">
+                        <h5 class="card-title">Health & Wellness</h5>
+                        <p class="card-text">Medical, dental, and vision insurance for employees are 100% employer
+                            paid with option to add dependents.</p>
+                    </div>
+                </div>
+
+                <div class="card aos-init aos-animate" data-aos="zoom-in" data-aos-delay="200">
+                    <div class="card-body">
+                        <h5 class="card-title">Competitive Compensation</h5>
+                        <p class="card-text">Compensation that provides financial peace of mind for our employees
+                            including annual salary revisions and quarterly performance bonuses.
+                        </p>
+                    </div>
+                </div>
+                <div class="card aos-init aos-animate" data-aos="zoom-in" data-aos-delay="300">
+                    <div class="card-body">
+                        <h5 class="card-title">Personal Development
+                        </h5>
+                        <p class="card-text">Impactful mentoring and pairing to help you set up for success and help
+                            you get integrated into the iShift family.
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="apply-container d-flex align-items-center justify-content-center">
+            <div class="stripe"></div>
+            <a href="https://www.linkedin.com/company/ishift-io/jobs/" target="_blank"
+                class="button-secondary w-button">Apply Online<span class="button-arrow"></span></a>
         </div>
     </section>
     <footer id="footer">
@@ -127,6 +199,7 @@
                     </p>
                 </div>
 
+                <div class="col-md-2 footer-links">
                 <div class="col-md-2 footer-links">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
@@ -172,7 +245,7 @@
         crossorigin="anonymous"></script>
 
     <script>
-        ScrollReveal().reveal('.section-header ', {
+        ScrollReveal().reveal('.solutions-intro ', {
             duration: 1700,
             origin: 'bottom',
             distance: '50px',
@@ -180,9 +253,29 @@
 
         ScrollReveal().reveal('.card', {
             duration: 1700,
-            origin: 'top',
             scale: '0.85',
-            delay: 500
+            delay: 300
+        })
+
+        ScrollReveal().reveal('.reveal-1', {
+            duration: 1700,
+            origin: 'left',
+            distance: '50px',
+            delay: 150
+        })
+
+        ScrollReveal().reveal('.reveal-2', {
+            duration: 1700,
+            origin: 'right',
+            distance: '50px',
+            delay: 150
+        })
+
+        ScrollReveal().reveal('.stripe', {
+            duration: 1700,
+            origin: 'right',
+            distance: '100px',
+            delay: 150
         })
         const currentUrl = window.location.href;
         const newUrl = currentUrl.replace('index.html', '');
